--- a/composer.json
+++ b/composer.json
@@ -11,4 +11,8 @@
         "php": ">=5.3.3",
         "zendframework/zendframework": "2.2.*"
     }
+	
+	"autoload": {
+		"psr-0": {"Album": "module/Album/src/"}
+	},
 }
